--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/pages-test/css/main.css">
 		</head>
 		<body>
 			<nav>
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:noemail@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/rmarshall75">github.com/rmarshall75</a></li>
 				</ul>
 			</footer>
 		</body>
